--- a/src/views/Welcome/4-Unforgettable/unforgettable.scss
+++ b/src/views/Welcome/4-Unforgettable/unforgettable.scss
@@ -17,32 +17,35 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        h2{
-            text-align: center;
-            @include family-Menseal-Bold;
-            @include adapted-content-web{
-                width: 37vw;
-                font-size: $fz-52;
-                line-height: 2.917vw;
+        div{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            
+            h2{
+                text-align: center;
+                @include family-Menseal-Bold;
+                @include adapted-content-web{
+                    width: 37vw;
+                    font-size: $fz-52;
+                    line-height: 2.917vw;
+                }
+                @include adapted-content-mobile{
+                    font-size: $fz-27 * $mobile-size ;
+                    width: 55vw;
+                    margin-bottom: 5vw;
+                }
             }
-            @include adapted-content-mobile{
-                font-size: $fz-27 * $mobile-size ;
-                width: 55vw;
-                margin-bottom: 5vw;
-            }
-        }
-        img{
-            @include adapted-content-web{
-                width: 47.708vw;
-                margin-bottom: 3vw;
-                margin-top: 1vw;
-            }
-            @include adapted-content-mobile{
-                width: 81.471vw;
-                margin-bottom: 5vw;
+            img{
+                @include adapted-content-web{
+                    width: 47.708vw;
+                    margin-bottom: 3vw;
+                    margin-top: 1vw;
+                }
+                @include adapted-content-mobile{
+                    width: 81.471vw;
+                    margin-bottom: 5vw;
+                }
             }
         }
     }
